refactor for multi-world support: manage PipeManager per world, add WorldManager, update plugin lifecycle